[package]
name = "shooter_speed_calculator"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["sync", "rt", "rt-multi-thread", "macros"] }
rmpv = { version = "1.3.1", features = ["with-serde"] }
futures-util = "0.3.32"
serde_json = "1.0.149"
sqlite = "0.37.0"
anyhow = "1.0.102"
