[package]
name = "shooter_speed_calculator"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["sync", "rt", "rt-multi-thread", "macros", "parking_lot", "time"] }
rmpv = { version = "1.3.1", features = ["with-serde"] }
futures-util = "0.3.32"
serde_json = "1.0.149"
sqlite = "0.37.0"
anyhow = "1.0.102"
tokio-tungstenite = "0.18.0"
tracing = "0.1.44"
parking_lot = "0.12.1"
rand = "0.9.2"
rmp = "0.8.15"
rmp-serde = "1.3.1"
thiserror = "1.0.69"